<resources>
    <string name="loading">Loading...</string>
    <string name="connect_first">Select the internet to connect</string>
    <string name="error_url_fail">Jumping to address error</string>
    <string name="unknown_error">unknown error</string>
    <string name="error_reading_file" translatable="false">Error reading from file</string>
    <string name="message_guest_no_permission">Guest account not be able to access, please register first</string>
    <string name="message_socket_connect">The connection has timed out, please try again.</string>
    <string name="message_network_no_connect">The connection has timed out, please try again.</string>
    <string name="message_network_timeout">The connection has timed out, please try again.</string>
    <string name="error">Error</string>
    <string name="error_input_amount">The amount format or value you entered is incorrect</string>
    <string name="error_input_empty">This field is required</string>
    <string name="error_identity_photo">Valid ID not uploaded</string>
    <string name="congratulation_win">Congratulations，betting slip suffix code:%1$s Winning :%2$s</string>
    <string name="warning_cancel">Remind you betting slip suffix code:%1$s has been canceled</string>
    <string name="prompt">Tips</string>
    <string name="btn_confirm">Confirm</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_retry">Try again</string>
    <string name="error_config_title">Bad line</string>
    <string name="find_new_version">New version</string>
    <string name="version_name">Version %s</string>
    <string name="btn_pass">Skip</string>
    <string name="login_account">Account</string>
    <string name="please_input_account">Enter account</string>
    <string name="login_password">Password</string>
    <string name="recommend_code">Invite Code(Optional</string>
    <string name="hint_recommend_code">Please enter invite code</string>
    <string name="error_recommend_code">Not available the outlet, please confirm</string>
    <string name="member_account">Account</string>
    <string name="hint_member_account">4-16 characters and contain numbers and letters.</string>
    <string name="error_member_account">Username must be 4–16 characters and contain letter and numbers</string>
    <string name="error_member_nickname">Nickname must be %1$d-%2$d characters long and contain English &amp; Chinese letter</string>
    <string name="error_register_id_exist">Username already exists</string>
    <string name="hint_register_password">8-20 characters and contain numbers and letters.</string>
    <string name="error_register_password">8-20 Alphanumeric characters is required.</string>
    <string name="error_password_format">A combination of 8 to 20 English letters and digits is required</string>
    <string name="register_please_read">Please read our</string>
    <string name="register_responsibilities">&#160;Responsible Gaming</string>
    <string name="register_privacy">Send me updates and promotions in accordance with the</string>
    <string name="register_privacy_policy">&#160;Privacy Policy</string>
    <string name="register_privacy_policy_promotions">Send me updates and promotions in accordance with the %s</string>
    <string name="register_over_21">I am over 21 years of age and have read and agree to the %1$s’s&#160;</string>
    <string name="register_rules_2nd_half"></string>
    <string name="register_not_ph_official">I am not a government official and/or employee directly connected with the operation of the Philippine government or any of its agencies.</string>
    <string name="register_not_ph_school">I am not a student of any school, college, or university in the Philippines.</string>
    <string name="register_rule_okbet">I understand that should my provided information has been found incorrect, OKBET has the right to impose a penalty on my account subject to its Terms and Conditions Sections 5.1 - 5.2.</string>
    <string name="register_rule_agree_all">I agree to all the above terms and conditions.</string>
    <string name="register_success">Register successfully</string>
    <string name="register_jump">The page will be jumping to %1$s 5 sec later.</string>
    <string name="register_recharge_now">Deposit now</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="error_confirm_password">Password and confirm password don\'t match</string>
    <string name="withdrawal_pwd">Withdraw Password</string>
    <string name="hint_withdrawal_pwd">4 digit password</string>
    <string name="phone_number">Phone number</string>
    <string name="hint_phone_number">Please enter the correct phone number</string>
    <string name="error_phone_number">Phone number formatted incorrectly</string>
    <string name="qq_number">QQ Number</string>
    <string name="hint_qq_number">QQ Account</string>
    <string name="error_qq_number">QQ account formatted incorrectly</string>
    <string name="e_mail">Email</string>
    <string name="hint_e_mail">Email</string>
    <string name="error_e_mail">Email formatted incorrectly</string>
    <string name="postal_code">Postal code</string>
    <string name="hint_postal_code">Please enter Postal code</string>
    <string name="province">Province</string>
    <string name="hint_province">Please enter province</string>
    <string name="city">City</string>
    <string name="hint_city">Please enter city</string>
    <string name="we_chat">Wechat</string>
    <string name="identity">KYC Verify</string>
    <string name="hint_we_chat_number">Wechat ID</string>
    <string name="zalo">Zalo</string>
    <string name="hint_zalo">Zalo Account</string>
    <string name="error_zalo">Zalo account formatted incorrectly</string>
    <string name="facebook">Facebook</string>
    <string name="hint_facebook">Facebook Account</string>
    <string name="error_facebook">Facebook account formatted incorrectly</string>
    <string name="whats_app">WhatsApp</string>
    <string name="hint_whats_app">WhatsApp Account</string>
    <string name="error_whats_app">WhatsApp account formatted incorrectly</string>
    <string name="telegram">Telegram</string>
    <string name="hint_telegram">Telegram Account</string>
    <string name="error_telegram">Telegram account formatted incorrectly</string>
    <string name="security_pb">Security Question</string>
    <string name="security_answer">Answer</string>
    <string name="hint_security_answer">Please enter your answer</string>
    <string name="real_name">Full Name</string>
    <string name="income_source">Source Of Income</string>
    <string name="identity_type">Valid ID Type</string>
    <string name="betting_shop">Outlet</string>
    <string name="register_identity">Valid ID</string>
    <string name="hint_register_identity">Please enter Valid ID</string>
    <string name="birth_date">Birthdate</string>
    <string name="hint_birth_date">YYYY/MM/DD</string>
    <string name="hint_real_name">Match the bank account name</string>
    <string name="verification_code">Verify code</string>
    <string name="verification_code_by_sms">SMS verify code</string>
    <string name="error_verification_code">CAPTCHA incorrectly</string>
    <string name="hint_verification_code_by_sms">SMS verify code</string>
    <string name="error_verification_code_by_sms">SMS verify code incorrectly</string>
    <string name="get_verification_code">SEND</string>
    <string name="get_valid_code_fail_point">Verification failed， please try again！</string>
    <string name="get_security_code">Send code</string>
    <string name="phone_verify_content">Welcome back to game. Please complete verification for account security.</string>
    <string name="dialog_security_title">Enter code.</string>
    <string name="dialog_security_error">You have entered a wrong verification code.</string>
    <string name="hint_security_code">Enter Code</string>
    <string name="dialog_security_need_phone">Your personal information is not complete, please contact customer service.</string>
    <string name="have_account">Already have an account?</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    <string name="lottery">Lottery</string>
    <string name="J203">OKGames</string>
    <string name="slot">Slot</string>
    <string name="fishing">Fishing</string>
    <string name="home_tan_main">HOME</string>
    <string name="home_tab_in_play">In-play</string>
    <string name="home_left_tab_in_play">In-play</string>
    <string name="home_tab_in_play2">INPLAY</string>
    <string name="home_tab_today">Today</string>
    <string name="home_tab_early">Early</string>
    <string name="home_tab_cs">Correct Score</string>
    <string name="home_tab_parlay">Parlay</string>
    <string name="home_tab_outright">Outrights</string>
    <string name="home_tab_end_score">Basketball Ending</string>
    <string name="home_tab_at_start">Soon</string>
    <string name="home_tab_eps">PRICE BOOSTS</string>
    <string name="label_all">All</string>
    <string name="display_more">Show More</string>
    <string name="conspire">Parlay</string>
    <string name="message_no_sport_game">There are currently no events for %1$s</string>
    <string name="champion">OUTRIGHT</string>
    <string name="league">League</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="sunday2_cn">Sunday</string>
    <string name="monday2">Mon</string>
    <string name="tuesday2">Tue</string>
    <string name="wednesday2">Wed</string>
    <string name="thursday2">Thu</string>
    <string name="status">Status</string>
    <string name="transfer_money">Amount</string>
    <string name="hint_verification_code">Please enter verify code</string>
    <string name="P001">Basketball ending game rules</string>
    <string name="P002">Basketball Ending Game is a bet type that consists of a 100 number combination entries, it does not limit players to place bet on the numbers of combination, member is allowed to place bet on all the 100 slots. Since this is called ending game, the ending scored will defined your luck.</string>
    <string name="P004">Select the score you want to buy here, you can choose more than one</string>
    <string name="P008">Enter amount here</string>
    <string name="P009">If you bet on multiple scores, the total bet = bet quantity * bet amount</string>
    <string name="P010">Check the estimated winning amount here</string>
    <string name="P011">Close cart here</string>
    <string name="P016">Click this button to close betting window. Choose more scores</string>
    <string name="J652">Time</string>
    <string name="A095">Points rules</string>
    <string name="A096">How to get points</string>
    <string name="A097">Points have a validity period and will be cleared automatically upon expiration. Please use them promptly.</string>
    <string name="A098">How to use points</string>
    <string name="A099">Points can be used to purchase products/bonuses in the points shop.\n\nYou can check the details of your points on the points shop page.\n\nPoints are for your own use only and are not transferable.</string>
    <string name="A100">Point deduction rules</string>
    <string name="A101">If a shop order fails to pass the review, the points deducted will be returned to your balance.\n\nIf it is discovered that points obtained in violation of regulations will be directly deducted from the points obtained in violation without prior notice.\n\nWe reserve the right to make the final interpretation of this event and have the right to change, delay or cancel the event</string>
</resources>