<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".ui.login.signUp.RegisterActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@null"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_register"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_margin="16dp"
        android:background="@null"
        android:contentDescription="@null"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/block_padding"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="w,1:2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:text="@string/btn_register"
        android:textColor="@color/blue"
        android:textSize="@dimen/textSize30sp"
        app:layout_constraintTop_toBottomOf="@id/block_padding" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_register">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:orientation="vertical">

            <org.cxct.sportlottery.ui.login.LoginEditText
                android:id="@+id/et_recommend_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginEnd="28dp"
                android:layout_marginBottom="4dp"
                app:cvHint="@string/hint_recommend_code"
                app:cvInputType="number"
                app:cvTitle="@string/recommend_code" />

            <org.cxct.sportlottery.ui.login.LoginEditText
                android:id="@+id/et_member_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginEnd="28dp"
                android:layout_marginBottom="4dp"
                app:cvHint="@string/hint_member_account"
                app:cvInputType="text"
                app:cvTitle="@string/member_account" />

            <org.cxct.sportlottery.ui.login.LoginEditText
                android:id="@+id/et_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginEnd="28dp"
                android:layout_marginBottom="4dp"
                app:cvHint="@string/hint_register_password"
                app:cvInputType="textPassword"
                app:cvTitle="@string/login_password" />

            <org.cxct.sportlottery.ui.login.LoginEditText
                android:id="@+id/et_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginEnd="28dp"
                android:layout_marginBottom="4dp"
                app:cvHint="@string/hint_confirm_password"
                app:cvInputType="textPassword"
                app:cvTitle="@string/confirm_password" />

            <org.cxct.sportlottery.ui.login.LoginEditText
                android:id="@+id/et_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginEnd="28dp"
                android:layout_marginBottom="4dp"
                app:cvHint="@string/hint_real_name"
                app:cvInputType="text"
                app:cvTitle="@string/real_name" />

            <org.cxct.sportlottery.ui.login.LoginEditText
                android:id="@+id/et_withdrawal_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginEnd="28dp"
                android:layout_marginBottom="4dp"
                app:cvHint="@string/hint_withdrawal_pwd"
                app:cvInputType="number"
                app:cvTitle="@string/withdrawal_pwd" />

            <org.cxct.sportlottery.ui.login.LoginEditText
                android:id="@+id/et_qq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginEnd="28dp"
                android:layout_marginBottom="4dp"
                app:cvHint="@string/hint_qq_number"
                app:cvInputType="number"
                app:cvTitle="@string/qq_number" />

            <org.cxct.sportlottery.ui.login.LoginEditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginEnd="28dp"
                android:layout_marginBottom="4dp"
                app:cvHint="@string/hint_phone_number"
                app:cvInputType="number"
                app:cvTitle="@string/phone" />

            <org.cxct.sportlottery.ui.login.LoginEditText
                android:id="@+id/et_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginEnd="28dp"
                android:layout_marginBottom="4dp"
                app:cvHint="@string/hint_e_mail"
                app:cvInputType="text"
                app:cvTitle="@string/e_mail" />

            <org.cxct.sportlottery.ui.login.LoginEditText
                android:id="@+id/et_we_chat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginEnd="28dp"
                android:layout_marginBottom="4dp"
                app:cvHint="@string/hint_we_chat_number"
                app:cvInputType="text"
                app:cvTitle="@string/we_chat" />

            <org.cxct.sportlottery.ui.login.LoginEditText
                android:id="@+id/et_zalo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginEnd="28dp"
                android:layout_marginBottom="4dp"
                app:cvHint="@string/hint_zalo"
                app:cvInputType="text"
                app:cvTitle="@string/zalo" />

            <org.cxct.sportlottery.ui.login.LoginEditText
                android:id="@+id/et_facebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginEnd="28dp"
                android:layout_marginBottom="4dp"
                app:cvHint="@string/hint_facebook"
                app:cvInputType="text"
                app:cvTitle="@string/facebook" />

            <org.cxct.sportlottery.ui.login.LoginEditText
                android:id="@+id/et_whats_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginEnd="28dp"
                android:layout_marginBottom="4dp"
                app:cvHint="@string/hint_whats_app"
                app:cvInputType="text"
                app:cvTitle="@string/whats_app" />

            <org.cxct.sportlottery.ui.login.LoginEditText
                android:id="@+id/et_telegram"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginEnd="28dp"
                android:layout_marginBottom="4dp"
                app:cvHint="@string/hint_telegram"
                app:cvInputType="text"
                app:cvTitle="@string/telegram" />

            <org.cxct.sportlottery.ui.login.LoginEditText
                android:id="@+id/et_verification_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginEnd="28dp"
                android:layout_marginBottom="4dp"
                app:cvEnableVerificationCode="true"
                app:cvHint="@string/hint_verification_code"
                app:cvInputType="number"
                app:cvTitle="@string/verification_code" />

            <RelativeLayout
                android:id="@+id/block_sms_valid_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginEnd="28dp"
                android:layout_marginBottom="4dp">

                <org.cxct.sportlottery.ui.login.LoginEditText
                    android:id="@+id/et_sms_valid_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cvEnableVerificationCode="true"
                    app:cvHint="@string/hint_verification_code_by_sms"
                    app:cvInputType="number"
                    app:cvTitle="@string/verification_code" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="10dp"
                    android:background="@android:color/white"
                    android:gravity="center"
                    android:minWidth="80dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_send_sms"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@drawable/effect_ripple_rectangle_blue_light"
                        android:text="@string/get_verification_code"
                        android:textColor="@color/color_select_black_gray"
                        android:textSize="@dimen/textSize14sp" />

                    <TextView
                        android:id="@+id/tv_timer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/gray4"
                        android:textSize="@dimen/textSize14sp"
                        tools:text="@string/send_timer" />

                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/cb_agreement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/effect_select_checkbox"
                    android:padding="4dp"
                    android:text="@string/desc_agreement"
                    android:textColor="@color/gray4"
                    android:textSize="@dimen/textSize12sp"
                    app:layout_constraintBottom_toTopOf="@id/btn_login"
                    app:layout_constraintStart_toStartOf="@id/btn_login" />

                <TextView
                    android:id="@+id/btn_agreement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/btn_agreement"
                    android:textColor="@color/pumpkinOrange"
                    android:textSize="@dimen/textSize12sp" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="28dp"
                android:layout_marginEnd="28dp"
                android:layout_marginBottom="6dp"
                android:background="@drawable/bg_radius_20_button_dusk"
                android:text="@string/btn_register"
                android:textColor="@color/selector_register_text"
                android:textSize="@dimen/textSize16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/desc_have_account"
                    android:textColor="@color/gray4"
                    android:textSize="@dimen/textSize12sp" />

                <TextView
                    android:id="@+id/btn_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/go_to_login"
                    android:textColor="@color/pumpkinOrange"
                    android:textSize="@dimen/textSize12sp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>