<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#66000000" />

    <org.cxct.sportlottery.view.DetailSportGuideTipsView
        android:id="@+id/dsgt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="visible"
        app:titleVisibility="visible"
        app:tvContent="@string/P002"
        app:tvTitle="@string/P001"
        app:tvTitleIndex="1/8" />

    <org.cxct.sportlottery.view.DetailSportGuideTipsView
        android:id="@+id/dsgt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="313dp"
        android:visibility="gone"
        app:titleVisibility="gone"
        app:tvContent="@string/P004"
        app:tvTitleIndex="2/8" />

    <org.cxct.sportlottery.view.DetailSportGuideTipsView
        android:id="@+id/dsgt3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="156dp"
        android:visibility="gone"
        app:titleVisibility="gone"
        app:tvTitleIndex="3/8" />

    <org.cxct.sportlottery.view.DetailSportGuideTipsView
        android:id="@+id/dsgt4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="156dp"
        android:visibility="gone"
        app:titleVisibility="gone"
        app:tvContent="@string/P016"
        app:tvTitleIndex="4/8" />

    <org.cxct.sportlottery.view.DetailSportGuideTipsView
        android:id="@+id/dsgt5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp"
        android:visibility="gone"
        app:titleVisibility="gone"
        app:tvContent="@string/P008"
        app:tvTitleIndex="5/8" />

    <org.cxct.sportlottery.view.DetailSportGuideTipsView
        android:id="@+id/dsgt6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp"
        android:visibility="gone"
        app:titleVisibility="gone"
        app:tvContent="@string/P009"
        app:tvTitleIndex="6/8" />

    <org.cxct.sportlottery.view.DetailSportGuideTipsView
        android:id="@+id/dsgt7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="273dp"
        android:visibility="gone"
        app:titleVisibility="gone"
        app:tvContent="@string/P010"
        app:tvTitleIndex="7/8" />

    <org.cxct.sportlottery.view.DetailSportGuideTipsView
        android:id="@+id/dsgt8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp"
        android:visibility="gone"
        app:titleVisibility="gone"
        app:tvContent="@string/P011"
        app:tvTitleIndex="8/8" />

</RelativeLayout>