<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/color_F6F7F8">

    <org.cxct.sportlottery.view.CustomTopToolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:topTitleText="@string/A095" />

  <androidx.core.widget.NestedScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginTop="@dimen/margin_10"
      android:background="@drawable/bg_white_radius_16_top">
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      android:layout_margin="@dimen/margin_20">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textSize14sp"
        android:textColor="@color/color_0D2245"
        android:textStyle="bold"
        android:text="@string/A096"/>
      <TextView
          android:id="@+id/tvGetPointContent"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="@drawable/bg_gray_radius_12_f6f7f8"
          android:layout_marginTop="@dimen/margin_8"
          android:lineHeight="17dp"
          android:padding="@dimen/margin_12"
          android:textSize="@dimen/textSize12sp"
          android:textColor="@color/color_6D7693"
          android:text="@string/A097"/>
      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/margin_16"
          android:textSize="@dimen/textSize14sp"
          android:textColor="@color/color_0D2245"
          android:textStyle="bold"
          android:text="@string/A098"/>
      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="@drawable/bg_gray_radius_12_f6f7f8"
          android:layout_marginTop="@dimen/margin_8"
          android:lineHeight="17dp"
          android:padding="@dimen/margin_12"
          android:textSize="@dimen/textSize12sp"
          android:textColor="@color/color_6D7693"
          android:text="@string/A099"/>
      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/margin_16"
          android:textSize="@dimen/textSize14sp"
          android:textColor="@color/color_0D2245"
          android:textStyle="bold"
          android:text="@string/A100"/>
      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="@drawable/bg_gray_radius_12_f6f7f8"
          android:layout_marginTop="@dimen/margin_8"
          android:lineHeight="17dp"
          android:padding="@dimen/margin_12"
          android:textSize="@dimen/textSize12sp"
          android:textColor="@color/color_6D7693"
          android:text="@string/A101"/>

  </LinearLayout>
  </androidx.core.widget.NestedScrollView>
</LinearLayout>