<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/margin_40"
    android:paddingHorizontal="@dimen/margin_12"
    tools:ignore="MissingDefaultResource">

    <TextView
        android:layout_width="80dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/J652"
        android:textColor="@color/color_0D2245"
        android:textSize="@dimen/textSize14sp" />

    <androidx.legacy.widget.Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/transfer_money"
        android:textColor="@color/color_0D2245"
        android:textSize="@dimen/textSize14sp" />

    <androidx.legacy.widget.Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <TextView
        android:layout_width="80dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/status"
        android:textColor="@color/color_0D2245"
        android:textSize="@dimen/textSize14sp" />
</LinearLayout>
